# bitdog-patroLibs

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  display.c
docs/html/: analog_8c.html  analog_8c.js  analog_8h.html  analog_8h.js  analog_8h_source.html  annotated.html  annotated_dup.js  buttons_8c.html  buttons_8c.js  buttons_8h.html  buttons_8h.js  buttons_8h_source.html  buzzer_8c.html  buzzer_8c.js  buzzer_8h.html  buzzer_8h.js  buzzer_8h_source.html  classes.html  dir_03f2603b0807f79314cd98ffe5efc321.html  dir_03f2603b0807f79314cd98ffe5efc321.js  dir_25685f9c6d837c57f295dee081495707.html  dir_25685f9c6d837c57f295dee081495707.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_9bb89822448514d94fe3e213d3ac83be.html  dir_9bb89822448514d94fe3e213d3ac83be.js  dir_d365e15d984c8d0205117ee0c40d6716.html  dir_d365e15d984c8d0205117ee0c40d6716.js  dir_d501334aeb1b78ad67cd3c72c37b1e87.html  dir_d501334aeb1b78ad67cd3c72c37b1e87.js  dir_df87b7122ef5289cf356733b26f2f823.html  dir_df87b7122ef5289cf356733b26f2f823.js  display_8c.html  display_8c.js  display_8h.html  display_8h.js  display_8h_source.html  doxygen_crawl.html  draw_8c.html  (+67 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_9.js  defines_b.js  defines_c.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_7.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+12 more)
src/buzzer/: buzzer.c  buzzer.h
src/display/: text.c  text.h
src/input/: microphone.c  microphone.h
wifi/: wifi_udp.c  wifi_udp.h
